@@ -1,6 +1,7 @@
 package org.pipelineframework.processor.phase;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.EnumMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -111,10 +112,11 @@ public class PipelineTargetResolutionPhase implements PipelineCompilationPhase {
      * @return a set of GenerationTarget values applicable to the given step model
      */
     private Set<GenerationTarget> resolveTargetsForModel(PipelineStepModel model, TransportMode transportMode) {
-        if (model.remoteExecution() != null && model.remoteExecution().isRemote()) {
+        var remoteExecution = model.remoteExecution();
+        if (remoteExecution != null && remoteExecution.isRemote()) {
             Set<GenerationTarget> targets = new LinkedHashSet<>(resolveTargetsForRole(model.deploymentRole(), transportMode));
             targets.add(GenerationTarget.REMOTE_OPERATOR_ADAPTER);
-            return Set.copyOf(targets);
+            return Collections.unmodifiableSet(targets);
         }
         if (model.delegateService() != null) {
             // Delegated steps only resolve local client target here.
@@ -126,6 +128,6 @@ public class PipelineTargetResolutionPhase implements PipelineCompilationPhase {
             && model.deploymentRole() == DeploymentRole.PLUGIN_SERVER) {
             return Set.of(GenerationTarget.LOCAL_CLIENT_STEP);
         }
-        return resolveTargetsForRole(model.deploymentRole(), transportMode);
+        return Collections.unmodifiableSet(new LinkedHashSet<>(resolveTargetsForRole(model.deploymentRole(), transportMode)));
     }
 }
